添加了 ewma 计算方法

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
 	"cSpell.words": [
+		"EWMA",
 		"Println",
 		"backtesting",
 		"gomonkey",
@@ -7,6 +8,7 @@
 		"inited",
 		"jili",
 		"mockgen",
+		"prashantv",
 		"qunwpa",
 		"tada"
 	]
